@@ -1,0 +1,11 @@
+# To disable qemu-kvm's page merging feature, set KSM_ENABLED=0 and
+# sudo restart qemu-kvm
+KSM_ENABLED=1
+SLEEP_MILLISECS=200
+# To load the vhost_net module, which in some cases can speed up
+# network performance, set VHOST_NET_ENABLED to 1.
+VHOST_NET_ENABLED=0
+
+# Set this to 1 if you want hugepages to be available to kvm under
+# /run/hugepages/kvm
+KVM_HUGEPAGES=0
